--- a/urban-spork-client/resource/client.css
+++ b/urban-spork-client/resource/client.css
@@ -1,6 +1,6 @@
 * {
     -fx-primary: #f8f8ff;
-    -fx-secondary: #708090;
+    -fx-secondary: derive(black, 90%);
     -fx-primarytext: #000000;
 }
 
@@ -22,6 +22,41 @@
     -fx-border-color: -fx-primary;
     -fx-font-size: 12px;
     -fx-text-alignment: center;
+}
+
+.jfx-list-view .list-cell:selected {
+    -fx-background-color: #9e9e9e;
+    -fx-text-fill: -fx-primary;
+}
+
+.jfx-list-view .scroll-bar:horizontal .track, .jfx-list-view .scroll-bar:vertical .track {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0em;
+    -fx-border-radius: 2em;
+}
+
+.jfx-list-view .scroll-bar:horizontal .increment-button, .jfx-list-view .scroll-bar:horizontal .decrement-button {
+    -fx-background-color: transparent;
+    -fx-background-radius: 0em;
+    -fx-padding: 0 0 10 0;
+}
+
+.jfx-list-view .scroll-bar:vertical .increment-button, .jfx-list-view .scroll-bar:vertical .decrement-button {
+    -fx-background-color: transparent;
+    -fx-background-radius: 0em;
+    -fx-padding: 0 10 0 0;
+}
+
+.jfx-list-view .scroll-bar .increment-arrow, .jfx-list-view .scroll-bar .decrement-arrow {
+    -fx-shape: " ";
+    -fx-padding: 0;
+}
+
+.jfx-list-view .scroll-bar:horizontal .thumb, .jfx-list-view .scroll-bar:vertical .thumb {
+    -fx-background-color: derive(black, 90%);
+    -fx-background-insets: 2, 0, 0;
+    -fx-background-radius: 2em;
 }
 
 #logTextArea {
