--- a/urban-spork-client/resource/client.css
+++ b/urban-spork-client/resource/client.css
@@ -34,7 +34,6 @@
 
 .root {
     -fx-font-family: "Fira Code";
-    -fx-font-size: 12px;
 }
 
 .label {
@@ -50,10 +49,17 @@
     -fx-text-alignment: center;
 }
 
-.jfx-list-view .jfx-list-cell:selected {
+.list-view {
+    -fx-background-insets: 0;
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.list-view:focused {
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.list-view .list-cell:selected {
     -fx-font-weight: 700;
-    /* -fx-background-color: #9e9e9e; */
-    /* -fx-text-fill: -fx-primary; */
 }
 
 .jfx-list-view .scroll-bar:horizontal .track, .jfx-list-view .scroll-bar:vertical .track {
@@ -86,10 +92,20 @@
     -fx-background-radius: 2em;
 }
 
-#logTextArea {
+.text-area {
+    -fx-font-weight: 500;
     -fx-font-size: 13px;
-    -fx-background-color: #000000;
     -fx-highlight-fill: #00ff00;
-    -fx-highlight-text-fill: #000000;
     -fx-text-fill: #00ff00;
+    -fx-highlight-text-fill: #000000;
+    -fx-background-insets: 0;
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.text-area:focused {
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.text-area .content {
+    -fx-background-color: #000000;
 }
