--- a/urban-spork-client/resource/client.fxml
+++ b/urban-spork-client/resource/client.fxml
@@ -159,7 +159,7 @@
          <content>
             <ScrollPane prefViewportHeight="453.0" prefViewportWidth="640.0">
                <content>
-                  <JFXTextArea fx:id="logTextArea" editable="false" minHeight="430.0" minWidth="620.0" />
+                  <TextArea fx:id="logTextArea" editable="false" minHeight="430.0" minWidth="620.0" />
                </content>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
